test/syc/good/initunion.c
/*
 * Union initialization
 */

union u {
	int i;
	char c;
};

union u u1 = { 1 };

union v {
	char c;
	int i;
};

union v v1 = { 1 };
